--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2KTE
 endorsed.classpath=
 excludes=
-file.reference.TEXTO.jar=..\\TEXTO\\TEXTO.jar
+file.reference.ComponentePer.jar=C:\\Users\\KLVC-WFE9L\\Workspace\\TEXTO\\ComponentePer.jar
+file.reference.TEXTO.jar=../TEXTO/TEXTO.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
+    ${file.reference.ComponentePer.jar}:\
     ${file.reference.TEXTO.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
